Fixed minor issue with text overflow in page about.

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -118,6 +118,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 .card-container {
   height: 100%;
+  overflow: scroll;
 }
 
 // control the formatting of card on home page
